# image-creator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  get-oci-sizes.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: Publish.yaml  QA.yaml  Tests.yaml  build.yaml  qa.yml
src/image_creator/: __main__.py  constants.py  creator.py  entrypoint.py  inputs.py  logger.py
src/image_creator/cache/: manager.py  policy.py
src/image_creator/steps/: __init__.py  base.py  cache.py  check_inputs.py  contents.py  image.py  machine.py  oci_images.py  sizes.py
src/image_creator/utils/: aria2.py  download.py  file.py  image.py  misc.py  oci_images.py  requirements.py
